--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
-    "vue": "^2.3.3"
+    "vue": "^2.3.3",
+    "vue-google-autocomplete": "^1.0.11"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
